# nlp_100

./: .gitignore  main.py  pyproject.toml  ready.ipynb  sec1.ipynb  sec1.py  sec2.ipynb  sec2.py  sec3.py  sec4.py
