[project]
name = "nlp-100"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ginza>=5.2.0",
    "ja-ginza-electra>=5.2.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]
